...
                    android:text="No Parking Spot Selected"
                    android:textSize="16sp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/listingTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:hint="@string/listing_title_hint_string"
...
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/handicapped_string"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/tandemCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/tandem_string"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>
...
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/suv_string"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/coveredCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/covered_string"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal">

                <CheckBox
                    android:id="@+id/mondayCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="Monday"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/tuesdayCheckBox"
                    android:layout_width="wrap_content"
...
                    android:buttonTint="@color/colorAccent"
                    android:text="Tuesday"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/wednesdayCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="Wednesday"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/thursdayCheckBox"
                    android:layout_width="wrap_content"
...
                    android:buttonTint="@color/colorAccent"
                    android:text="Friday"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/saturdayCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorAccent"
                    android:text="Saturday"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"/>

                <CheckBox
                    android:id="@+id/sundayCheckBox"
                    android:layout_width="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/timeButton"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:textColor="@color/white"
                    android:text="Select Time"/>

                <TextView
                    android:id="@+id/fromTimeTextView"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
...
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:text="Location"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

            <EditText
                android:id="@+id/aboutEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
...
                     android:layout_marginEnd="16dp"
                     android:textSize="18sp"
                     android:text="Select Cancellation Policy"
                     android:layout_marginTop="12dp"
                     android:layout_marginBottom="12dp"/>
                 <Spinner
                     android:id="@+id/spinnerCancellation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     android:textSize="18sp"
                     android:layout_marginTop="12dp"
...
                android:textSize="14sp"
                android:text="Cancellation Policy Details"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"/>

            <com.blackcat.currencyedittext.CurrencyEditText
                android:id="@+id/priceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                />

            <Button
                android:id="@+id/createListingButton"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingEnd="50dp"
...
