<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itp341.wang.cherrie.parkhere.LoginActivity">

    <com.github.rahatarmanahmed.cpv.CircularProgressView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        app:cpv_indeterminate="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail" />

        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPass" />

        <CheckBox
            android:id="@+id/rememberCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorAccent"
            android:layout_marginTop="16dp"
            android:text="Remember Me"/>

        <TextView
            android:text="@string/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity ="right"
            android:id="@+id/textForgotPassword"
            android:layout_marginTop="16dp"/>

        <Button
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:gravity ="center"
            android:layout_marginTop="32dp"
            android:id="@+id/buttonEnter" />
    </LinearLayout>

</RelativeLayout>
