<resources>
    <string name="app_name">ParkHere</string>
    <!-- SignUp and Login Strings -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email:</string>
    <string name="phone_num">Phone Number:</string>
    <string name="password">Password:</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="first">First Name:</string>
    <string name="last">Last Name:</string>
    <string name="owner">Owner</string>
    <string name="seeker">Seeker</string>
    <string name="password_invalid_signup">Password must have at least 10 characters long with one special character</string>
    <string name="facebook_app_id">1788111538080511</string>
    <string name="fb_login_protocol_scheme">fb1788111538080511</string>
    <!--ListOfPayments strings-->
    <string name="add_card_string">Add Card</string>

    <!--ListingDetail strings-->
    <string name="listing_title_string">Listing Title</string>
    <string name="listing_address_string">Address</string>
    <string name="price_string">$11</string>
    <string name="owner_name_string">Owner</string>
    <string name="category_string">Category</string>
    <string name="about_string">About</string>
    <string name="about_string_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec blandit et ligula quis maximus. Cras tempus odio non felis dictum, ut suscipit ante tempus. Mauris id purus tellus. Donec dignissim eros vel odio fringilla dignissim. Nunc venenatis pretium arcu, ac porttitor dolor consectetur ac. Fusce vulputate bibendum turpis, blandit egestas mauris facilisis in. Donec tincidunt hendrerit nulla vel faucibus.</string>
    <string name="listing_rating_string">Listing Rating</string>
    <string name="owner_rating_string">Owner Rating</string>
    <string name="more_reviews_string">More Reviews</string>
    <string name="payment_string">Payment</string>
    <string name="select_payment_string">Select Payment</string>
    <string name="payment_method_string">Payment Method</string>
    <string name="confirm_booking_string">Confirm Booking</string>
    <string name="total_price_string">Total $11</string>
    <string name="cancellation_string">Cancellation Policy</string>
    <string name="cancellation_policy">For a full refund of associated fees, cancellation must be made a full 24 hours prior to listing’s local start time (or 3:00 PM if not specified) on the start time of reserved day. If the Seeker cancels less than 24 hours before the start time, the costs are non-refundable.</string>
    <string name="availibility_string">Availibility</string>
    <string name="review_string_example">This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. This is a review. </string>

    <!--CreateEditListing strings-->
    <string name="listing_title_hint_string">Listing Name</string>
    <string name="handicapped_string">Handicapped</string>
    <string name="tandem_string">Tandem</string>
    <string name="suv_string">SUV</string>
    <string name="covered_string">Covered</string>
    <string name="location_hint_string">Location</string>
    <string name="about_hint_string">About</string>
    <string name="create_button_string">Create</string>
    <string name="cancel_string_moderate">For a full refund of associated fees, cancellation must be made a full 5 days prior to listing’s local start time (or 3:00 PM if not specified) on the start time of reserved day. If the Seeker cancels less than 5 days before the start time, the costs are non-refundable.</string>
    <string name="cancel_string_flexible">For a full refund of associated fees, cancellation must be made a full 24 hours prior to listing’s local start time (or 3:00 PM if not specified) on the start time of reserved day. If the Seeker cancels less than 24 hours before the start time, the costs are non-refundable.</string>
    <string name="cancel_string_strict">For a full refund of associated fees, cancellation must be made a full 7 days prior to listing’s local start time (or 3:00 PM if not specified) on the start time of reserved day. If the Seeker cancels less than 7 days before the start time, the costs are non-refundable.</string>

    <!--RateReview strings-->
    <string name="review_hint_string">Please leave a review about your parking experience. Please note that your review will be moderated and published publicly for other users to see.</string>
    <string name="submit_button_string">Submit</string>
    <string name="owner_label_string">Owner</string>
    <string name="listing_label_string">Listing</string>

    <!--ListOfBookings strings-->
    <string name="list_of_bookings_actionbar_title">Bookings</string>
    <string name="current_label_string">Current</string>

    <!--ListOfBookings strings-->
    <string name="list_of_listings_actionbar_title">Listings</string>

    <!--ListOfRatings strings-->
    <string name="list_of_ratings_actionbar_title">Ratings</string>

    <!--Rating strings-->
    <string name="rating_title_string">Rating title</string>

    <!--Home strings-->
    <string name="home_drawer_item_string">Home</string>
    <string name="bookings_drawer_item_string">Bookings</string>
    <string name="listings_drawer_item_string">Listings</string>
    <string name="create_listing_drawer_item_string">Create Listing</string>
    <string name="payment_drawer_item_string">Payment</string>
    <string name="settings_drawer_item_string">Settings</string>
    <string name="help_drawer_item_string">Help</string>
    <string name="title_activity_maps">Map</string>
    <string name="dialog_title">Warning: You are not registered as an Owner</string>
    <string name="dialog_title_seeker">Warning: You are not registered as an Seeker</string>
    <string name="dialog_message">Only registered Owners can create listings. Would you like to sign up as an Owner?</string>
    <string name="dialog_message_seeker">Only registered Seekers can search and make bookings. Would you like to sign up as an Seekers?</string>

    <!--Floating Search Bar strings-->
    <string name="menu_advanced_string">Advanced</string>
    <string name="menu_filters_string">Filters</string>
    <string name="menu_latlong_string">LatLong Search</string>

    <!-- Settings strings-->
    <string name="dialog_title_payment">Authorize Payment</string>
    <string name="dialog_authorize">Your pending payments have been authorized</string>
    <string name="dialog_message_payment">Are you sure you would like to authorize your pending payments to go through?</string>
    <string name="title_activity_list_of_parking_spots">ListOfParkingSpotsActivity</string>
</resources>
