<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="itp341.wang.cherrie.parkhere.WelcomeActivity">

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:id="@+id/buttonLogin" />

    <Button
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:id="@+id/buttonSignup"
        android:layout_marginTop="32dp"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/buttonFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <com.github.rahatarmanahmed.cpv.CircularProgressView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        app:cpv_indeterminate="true" />

</LinearLayout>


